secret-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secret-ingress
  labels:
    name: secretingress
spec:
  tls:
    - hosts:
        - secret.com
      secretName: tls-secret
  rules:
    - host: secret.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: secret-service
                port:
                  number: 80
